Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47523

TreeView incorrect index after moving rows

XMLWordPrintable

      styleData.index is not updated after moving rows.

      Replicate this in the included example by moving "Fifth>Eloise" to "Second>Brice" and notice the console output.
      Clicking on the item will also report information about its parent via the styleData.

        1. TreeViewMoveBug.zip
          18 kB
        2. TreeViewMoveBug.zip
          17 kB
        3. TreeViewMoveBug.zip
          18 kB
        4. TreeViewMoveBug.zip
          18 kB
        For Gerrit Dashboard: QTBUG-47523
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            xcdix Konstantin
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes